[tool.poetry]
name = "dect"
version = "0.1.0"
description = "A fast package to compute the Euler Characteristic Transform"
authors = [
    "Ernst Röell <ernst.roeell@helmholtz-munich.de>",
    "Bastian Rieck <bastian.grossenbacher@unifr.ch>",
]
maintainers = ["Ernst Röell <ernst.roeell@helmholtz-munich.de>"]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.5.1"
pdoc = "^15.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
matplotlib = "^3.10.0"
pytest-cov = "^6.0.0"
ipykernel = "^6.29.5"


[tool.poetry.group.test.dependencies]
pytest-cov = "^6.0.0"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
