[project]
name = "dect"
version = "0.1.0"
description = "A fast package to compute the Euler Characteristic Transform"
authors = [
    { name = "Ernst Röell", email = "ernst.roeell@helmholtz-munich.de" },
    { name = "Bastian Rieck", email = "bastian.grossenbacher@unifr.ch" },
]
requires-python = ">=3.10.0"
readme = "README.md"
maintainers = [{ name = "Ernst Röell", email = "ernst.roeell@helmholtz-munich.de" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
]
dependencies = [
    "torch>2.0.0",
    "pdoc>=15.0.1,<16",
    "torch-geometric>=2.6.1,<3",
    "geotorch>=0.3.0,<0.4",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4,<9",
    "matplotlib>=3.10.0,<4",
    "pytest-cov>=6.0.0,<7",
    "ipykernel>=6.29.5,<7",
]
test = [
    "pytest-cov>=6.0.0,<7",
    "pytest>=8.3.4,<9",
]

[tool.uv]
default-groups = [
    "dev",
    "test",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
