[project]
name = "dect"
version = "0.1.0"
description = "A fast package to compute the Euler Characteristic Transform"
authors = [
    { name = "Ernst Röell", email = "ernst.roeell@helmholtz-munich.de" },
    { name = "Bastian Rieck", email = "bastian.grossenbacher@unifr.ch" },
]
requires-python = ">=3.10.0"
readme = "README.md"
maintainers = [{ name = "Ernst Röell", email = "ernst.roeell@helmholtz-munich.de" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
]
dependencies = [
    "torch>2.0.0",
    "geotorch>=0.3.0,<0.4",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4,<9",
    "matplotlib>=3.10.0,<4",
    "pytest-cov>=6.0.0,<7",
    "ipykernel>=6.29.5,<7",
    "pdoc>=15.0.1,<16",
    "ipython>=8.34.0",
    "pyvista>=0.46.3",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.21",
    "mkdocstrings[python]>=0.30.1",
    "livereload>=2.7.1",
    "mkdocs-autoapi>=0.4.1",
    "mkdocs-nbconvert>=0.4",
    "markdown-include>=0.8.1",
]
test = [
    "pytest-cov>=6.0.0,<7",
    "pytest>=8.3.4,<9",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
